# 6DMG

./: .gitignore  LICENSE  README.md  README_install_htk.txt
6DMG_htk/airwriting_letter_based/GroundTruth/: 0_generate_share.pl  1_2_prep_tst_scp_single.pl  1_3_batch.pl  2_batch.pl  README.txt
6DMG_htk/airwriting_letter_based/LeaveOneOut/: .gitignore  0_0_generate_wdnet_bigram.pl  0_1_generate_share.pl  1_0_init_fil.pl  1_1_prep_trn_scp_hmmdef_single.pl  1_2_prep_merge_tst_scp_single.pl  1_3_prep_det_tst_scp_single.pl  1_4_batch.pl  1_4_prep_groundtruth_tst_scp_single.pl  1_5_batch.pl  2_0_make_tree.pl  2_1_make_subtree.pl  2_2_batch.pl  (+6 more)
6DMG_htk/airwriting_word_based/: README.txt
6DMG_htk/chars/: .gitignore  0_gen_share.pl  0_gen_single_proto.pl  1_batch.pl  1_build_iso_char_hmm_single.pl  2_stats.pl  README.txt
6DMG_htk/gestures/: .gitignore  README.txt  UD.idx  UI.idx  exp1.pl  exp1_avg_res.pl  exp1_err_rep.pl  exp1_res.pl  exp1_single.pl  exp1_top.pl  exp2.pl  exp2_all_res.pl  exp2_err_rep.pl  exp2_res.pl  exp2_single.pl  exp2_top.pl  exp3.pl  exp3_all_res.pl  exp3_err_rep.pl  exp3_res.pl  exp3_single.pl  exp3_stats.pl  exp3_top.pl  gen_global_mlf.pl
6DMG_htk/words/: .gitignore  0_gen_single_proto.pl  1_build_iso_char_hmm.pl  1_build_iso_lig_hmm.pl  2_dict_wdnet_prepare.pl  3_0_train_lig_single.pl  3_1_batch.pl  3_2_stats.pl  4_0_train_lig_single.pl  README.txt
6DMG_htk/words_letter_based/: .gitignore  0_0_generate_share.pl  0_1_generate_wdnet_bigram.pl  1_0_prep_trn_scp_mlf_hmmdefs.pl  1_1_batch.pl  2_0_make_tree.pl  2_1_make_subtree.pl  2_2_batch.pl  3_0_viterbi_bigram_nbest.pl  3_1_batch.pl  4_stats_bigram_nbest.pl  5_0_ext_bigram_nbest.pl  5_1_batch.pl  5_2_stats_ext_bigram_nbest.pl  README.txt
6DMG_htk/words_word_based/: .gitignore  2_dict_wdnet_prepare.pl  4_1_batch.pl  4_2_stats.pl  README.txt
6DMG_loader/: CMakeLists.txt  README.txt
6DMG_loader/include/: GestureDef.h  examples.h  util.h
6DMG_loader/include/6DMG/: Config.h  Database.h  GestureDef.h  examples.h  util.h
6DMG_loader/sqlite3/: README.txt  sqlite3
6DMG_loader/src/: Database.cpp  GestureDef.cpp  examples.cpp  main.cpp  util.cpp
(+5155 files in other folders)
